<resources>
    <string name="app_name">TestChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chats">Чаты</string>
    <string name="menu_account">Учетная запись</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="action_log_in">Войти</string>
    <string name="welcome">"Добро пожаловать, %s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Пароли не совпадают!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authentication_required">Сначала войдите или зарегистрируйтесь!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_with">Чат с %s</string>
    <string name="prompt_retype_password">Введите пароль повторно</string>
    <string name="login">Придумайте ник</string>
    <string name="exit">Выйти</string>
    <string name="authentication_required_short">Необходима авторизация</string>
    <string name="ADDstring">Добавить</string>
    <string name="CANCELstring">Отмена</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="nickname">Псевдоним</string>
    <string name="id">chatId</string>
    <string name="hint_login">Логин</string>
    <string name="unknown">Неизвестный пользователь</string>
    <string name="chatException">Что-то пошло не так(...</string>
    <string name="reconnected">Соединение восстановлено!</string>
    <string name="conection_required">Отсутствует интернет-соединение!</string>
</resources>